UF-7046: cleaned up API
